Version 31  Live Server Fixes

--Added a bunch of stats to the admin view.

--Added current-active-user count stat harvesting to every flush call.

--Fixed a deadlock in ping_house by retrying after a deadlock.

--Fixed deprecated call-by-reference warnings (thanks Mike H).




Version 31   2014-January-28

--Added a custom reason-for-shutdown message sent by the server that the client
  displays.

--Added pending shutdown warnings to the ping and self-test protocols.  The
  client displays a dismissable message when it receives a shutdown warning
  from the server.

--Client now retries eternally until it hears back from server (instead of
  stopping after a hard connection error occurs).  A network outtage or server
  downtime will no longer result in your death, assuming that the outtage is
  short enough that you don't get timed out server-side.

--Added a grace-period switch on the server that can be enabled after unplanned
  outtages to allow players delayed by the outtage to check in stale robberies
  and self tests without dying.

--Fixed eyedropper tool getting stuck on when ALT-tabbing.  On Windows, this
  required an update of the SDL DLL from 1.2.13 to 1.2.15 (note that the DLL
  itself seems to have the version number 1.2.14, but I did download the
  1.2.15 bundle).





Version 30  Live Server Fixes

--Added stat tracking max total house value seen in a given day (for computing
  contest exchange rate).

--Added full robbery history on each player's detail page in admin view.

--Fixed so that admin error emails are sent before logging the error in the
  database (for cases where the error was caused by NOT being able to connect
  to the database in the first place).

--Support for monitoring concurrent MySQL connections and contacting admin if a
  threshold is surpassed.

--Made server/client exchange more robust against MySQL connection overflow.
  The server now sleeps for 30 seconds after failing to connect due to too many